# dolphin

./: CMakeLists.txt  Readme.md
Data/: dolphin-zek.desktop
Data/Sys/Shaders/: FXAA.glsl  naturalcolor.glsl
Installer/: dolphin-zek.spec
Source/Android/app/: build.gradle
Source/Android/app/release/: output.json
Source/Android/jni/: MainAndroid.cpp
Source/Core/AudioCommon/: PulseAudioStream.cpp
Source/Core/Common/: CommonPaths.h  FileUtil.cpp  FileUtil.h  IniFile.cpp  Matrix.h  StringUtil.cpp  UPnP.cpp  Version.cpp
Source/Core/Common/Config/: Config.cpp
Source/Core/Core/: ActionReplay.cpp  Analytics.cpp  BootManager.cpp  ConfigManager.cpp  ConfigManager.h  Core.cpp  Core.h  GeckoCodeConfig.cpp  Host.h  MemoryWatcher.cpp  NetPlayServer.cpp  PatchEngine.cpp  WiiUtils.cpp
Source/Core/DiscIO/: WbfsBlob.cpp
Source/Core/DolphinNoGUI/: CMakeLists.txt  MainNoGUI.cpp  Platform.cpp  Platform.h  PlatformHeadless.cpp  PlatformX11.cpp
Source/Core/DolphinQt/: AboutDialog.cpp  CMakeLists.txt  DolphinQt.rc  Host.cpp  Info.plist.in  Main.cpp  MainWindow.cpp  MainWindow.h  MenuBar.h  RenderWidget.cpp  RenderWidget.h  Settings.cpp
Source/Core/UICommon/: CommandLineParse.cpp  GameFileCache.cpp  UICommon.cpp
Source/Core/VideoCommon/: AbstractTexture.cpp  BPStructs.cpp  CMakeLists.txt  CommandProcessor.cpp  Fifo.cpp  Fifo.h  FramebufferManager.cpp  FramebufferManager.h  GeometryShaderGen.cpp  OpcodeDecoding.cpp  PixelShaderGen.cpp  PixelShaderGen.h  PostProcessing.cpp  RenderBase.cpp  RenderBase.h  ShaderGenCommon.h  TextureCacheBase.cpp  TextureCacheBase.h  TextureConfig.h  UberShaderPixel.cpp  UberShaderVertex.cpp  VertexLoaderManager.cpp  VertexLoaderManager.h  VertexShaderGen.cpp  VertexShaderManager.cpp  VideoBackendBase.cpp  VideoConfig.cpp  VideoConfig.h  XFStructs.cpp
Source/DSPTool/: StubHost.cpp
Source/UnitTests/: StubHost.cpp
Source/VSProps/: Base.props
(+115 files in other folders)
